<resources>
    <string name="app_name">StayFit</string>


    <!--    //TEST ADDS-->
    <string name="appid" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="bannerAds" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstatialAds" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="teddy_welcome">Hello there. My name is Teddy. You are about the be fit as rock. But i can\'t find your profile. So i will redirect you to profile page.</string>
    <string name="protein">Protein</string>
    <string name="carb">Carbohydrate</string>
    <string name="fat">Fat</string>
    <string name="g_taken">gram has taken</string>
    <string name="teddy_warning">Please create your profile</string>
    <string name="c_taken">calories has taken</string>
    <string name="categories">Categories</string>
    <string name="add_food">Add food +</string>
    <string name="f_name">Food name</string>
    <string name="how_much_gram">how much grams?</string>
    <string name="gram_protein" translatable="false">protein (gr)</string>
    <string name="gram_carb">carbonhydrate (gr)</string>
    <string name="gram_fat">fat (gr)</string>
    <string name="photo">Take a photo</string>
    <string name="gallery">Select from gallery</string>
    <string name="close_window">Close Window</string>
    <string name="save">Save Today</string>
    <string name="find_food">Search food by name</string>
    <string name="tags">tags (please divide words using \',\')</string>
    <string name="fill">Please fill all blank areas (tags are not required) and check grams</string>
    <string name="success">Successfully added to list</string>
    <string name="kcal">Calories</string>
    <string name="gram">Grams</string>
    <string name="eaten">I ate this</string>
    <string name="error">Unknown error!</string>
    <string name="delete">Successfully deleted</string>
    <string name="find_food_by_c">Searching food by categorie</string>
    <string name="max">You are reached the maximum limit</string>
    <string name="please">Please enter an acceptable value</string>
    <string name="daily_add">Sucessfully added to daily food consume list</string>
    <string name="new_profile">New Profile</string>
    <string name="edit_profile">Edit Proile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="activate">Activate</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="my_profile">Empty Profile</string>
    <string name="ate_list">Today \'s Menu:</string>
    <string name="progress">How am I progressing?</string>
    <string name="err">There is a problem. Please check the data you wrote. Do not leave any spaces. Do not enter a value of 0.</string>
    <string name="congrats">Congratulations, your profile list has been successfully changed.</string>
    <string name="sav">Save</string>
    <string name="ok">Okey</string>
    <string name="cancel">Cancel</string>
    <string name="seleted">Selected</string>
    <string name="sprofile">" 's Profile"</string>
    <string name="ate_list_empty">Today \'s Menu: (no data avaible)</string>


    <!--    //REAL ADS-->
<!--            <string name="appid" translatable="false">ca-app-pub-8946455145480386~8396880095</string>-->
<!--            <string name="bannerAds" translatable="false">ca-app-pub-8946455145480386/8045526300</string>-->
<!--            <string name="interstatialAds" translatable="false">ca-app-pub-8946455145480386/5419362963</string>-->

    <!-- Strings used for fragments for navigation -->

</resources>