<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Profile"
    android:background="@drawable/gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="2000dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/topbar"
                    app:cardCornerRadius="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/button7"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableTop="@android:drawable/ic_menu_add"
                    android:text="@string/new_profile"
                    app:cornerRadius="50dp"
                    app:layout_constraintBottom_toTopOf="@+id/button8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableTop="@android:drawable/ic_menu_edit"
                    android:text="@string/edit_profile"
                    app:cornerRadius="50dp"
                    app:layout_constraintBottom_toTopOf="@+id/button9"
                    app:layout_constraintEnd_toEndOf="@+id/button7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button7" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableTop="@android:drawable/ic_menu_delete"
                    android:text="@string/delete_profile"
                    app:cornerRadius="50dp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardView3"
                    app:layout_constraintEnd_toEndOf="@+id/button8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button8" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>