<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient3"
    tools:context=".MainActivity"
    tools:menu="@menu/menu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/fl_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:background="@drawable/gradient4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#4DFF9800"
                    app:cardCornerRadius="70dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="10dp">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/audiowide"
                            android:padding="5dp"
                            android:shadowColor="#000000"
                            android:shadowRadius="5"
                            android:text="@string/teddy_warning"
                            android:textAlignment="center"
                            android:textColor="@color/my_text_color"
                            android:textSize="20sp"
                            android:visibility="visible"
                            tools:visibility="visible" />

                        <ProgressBar
                            android:id="@+id/progressBar3"
                            style="@android:style/Widget.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="60dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="60dp"
                            android:progress="0"
                            android:progressDrawable="@drawable/progressbar_color" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_alinankcal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/audiowide"
                                android:text="@string/c_taken"
                                android:textColor="@color/my_sub_text_color"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:shadowColor="#000000"
                    android:shadowRadius="5"
                    android:text="@string/protein"
                    android:textAlignment="textStart"
                    android:textColor="@color/my_text_color"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:paddingRight="30dp"
                    android:progress="0"
                    android:progressDrawable="@drawable/progressbar_color" />

                <TextView
                    android:id="@+id/tv_alinanpro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="30dp"
                    android:paddingTop="5dp"
                    android:text="@string/g_taken"
                    android:textAlignment="textStart"
                    android:textColor="@color/my_sub_text_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:shadowColor="#000000"
                    android:shadowRadius="5"
                    android:text="@string/carb"
                    android:textAlignment="textStart"
                    android:textColor="@color/my_text_color"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:paddingRight="30dp"
                    android:progressDrawable="@drawable/progressbar_color" />

                <TextView
                    android:id="@+id/tv_alinankarb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="30dp"
                    android:paddingTop="5dp"
                    android:text="@string/g_taken"
                    android:textAlignment="textStart"
                    android:textColor="@color/my_sub_text_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:shadowColor="#000000"
                    android:shadowRadius="5"
                    android:text="@string/fat"
                    android:textAlignment="textStart"
                    android:textColor="@color/my_text_color"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progressBar4"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:paddingRight="30dp"
                    android:progressDrawable="@drawable/progressbar_color" />

                <TextView
                    android:id="@+id/tv_alinanyag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="30dp"
                    android:paddingTop="5dp"
                    android:text="@string/g_taken"
                    android:textAlignment="textStart"
                    android:textColor="@color/my_sub_text_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>